--- a/mics2015.tex
+++ b/mics2015.tex
@@ -139,11 +139,12 @@ a problem is broken down into subparts in order to make solving easier and less 
   %in which JVM can be utilized. Probably need to explain that the JVM
   %is Clojure interpreter, mention and explain REPL somewhere in this paragraph.}
 %\emcomment{Need to explain what you mean by dynamic}
-Clojure utilizes the Java Virtual Machine (JVM) as an interpreter, and Clojure code compiles to JVM bytecode.  which means that it compiles to JVM bytecode, and it offers
-easy 
+Clojure utilizes the Java Virtual Machine (JVM) as an interpreter, and Clojure code compiles to JVM bytecode.
+It offers easy 
 %\emcomment{accessibilty?} 
 accessibility of Java frameworks. The Clojure REPL is another easy way to get acquainted with Clojure.
-The REPL allows users to see immediate results and respond easily and quickly. For any programmer, the use of the REPL is highly advised and can make programming in Clojure much simpler.
+The REPL allows users to see immediate results and respond easily and quickly. For any programmer, the use of the REPL 
+is highly advised and can make programming in Clojure much simpler.
 %\emcomment{This wouldn't make any sense to the target audience and is
   %not needed (perhaps with the exception of multithreading:}
 %including optional type hints
@@ -223,10 +224,13 @@ it will return the string we bound to the variable name. Here is an example of u
 	-> 3
 \end{verbatim}
 
-In this example, we saved a function that takes a number and increments it by adding 1 to it. In any function, the function name is the word after the \texttt{defn}, the pieces in the square brackets after the function name indicate the arguments that the function takes in, and what follows is the body, or what the function does.
+In this example, we saved a function that takes a number and increments it by adding 1 to it. In any function, the 
+function name is the word after the \texttt{defn}, the pieces in the square brackets after the function name indicate 
+the arguments that the function takes in, and what follows is the body, or what the function does.
 
 Now let's say that we have a program where we want to use a function, but only once. This means that we do not
-necessarily need to define it with a name because Clojure supports anonymous functions. Anonymous functions allow programmers to quickly make
+necessarily need to define it with a name because Clojure supports anonymous functions. Anonymous functions allow 
+programmers to quickly make
 % \emcomment{not sure what you mean by``rare'' here. Those that aren't predefined?}  
 functions when needed. 
 However, since these functions are not  stored, the program would not be able to use them by name more than once. 
@@ -259,8 +263,9 @@ of Clojure's collections are immutable, which means that the data within the str
 The different types of structures Clojure uses are lists (denoted by \texttt{()}),
 sets (denoted by \texttt{\#\{\}}), vectors (denoted by \texttt{[]}),
 and hashmaps (denoted by \texttt{\{\}}). The first three types of data
-structures listed can contain any number, including \texttt{nil} (Clojure's equivalent of \texttt{null} or nothing), of values of any type (a data structure
-is untyped, which means it does not care if types of values in one structure are mismatched):
+structures listed can contain any number, including \texttt{nil} (Clojure's equivalent of \texttt{null} or nothing), of 
+values of any type (a data structure is untyped, which means it does not care if types of values in one structure
+are mismatched):
 %\emcomment{don't use the word ``normal'' in a research paper} data structures: 
 \begin{verbatim}
 	(1 2 "foo" :a 9 "bar")
