added bibliography file and sample references

--- a/mics2015.tex
+++ b/mics2015.tex
@@ -132,7 +132,7 @@ The abstract
   %organized and well written.}
   
   
-Clojure, developed in 2007 by Rich Hickey, is a dynamic, functional
+Clojure, developed in 2007 by Rich Hickey~\cite{Hickey:2008}, is a dynamic, functional
 programming language in the Lisp family. Dynamic means that the process of solving
 a problem is broken down into subparts in order to make solving easier and less complex.
 %\emcomment{Use simpler, more concrete terminology: there are many ways
@@ -326,12 +326,15 @@ variable name:
 
 \section{Conclusions}\label{sec:conclusion}
 
-\section{References?}\label{sec:reference}
-\escomment{unsure if we actually put references directly into the
-  paper or not...}
-\emcomment{Emma - Don't worry about it for now. Do you have a reference you
-  would like to add?}
-\escomment{I have a few links to websites I used, but I'm not sure what format I should use for preparing them properly}
+\bibliographystyle{ACM}
+\bibliography{mics2015}
+
+% \section{References?}\label{sec:reference}
+% \escomment{unsure if we actually put references directly into the
+%   paper or not...}
+% \emcomment{Emma - Don't worry about it for now. Do you have a reference you
+%   would like to add?}
+% \escomment{I have a few links to websites I used, but I'm not sure what format I should use for preparing them properly}
 
 % That's all folks!
 \end{document}
