second round of comments on 1.1

--- a/mics2015.tex
+++ b/mics2015.tex
@@ -135,6 +135,7 @@ The abstract
 Clojure, developed in 2007 by Rich Hickey~\cite{Hickey:2008}, is a dynamic, functional
 programming language in the Lisp family. Dynamic means that the process of solving
 a problem is broken down into subparts in order to make solving easier and less complex.
+\emcomment{``dynamic'' refers to ``dynamically typed''} 
 %\emcomment{Use simpler, more concrete terminology: there are many ways
   %in which JVM can be utilized. Probably need to explain that the JVM
   %is Clojure interpreter, mention and explain REPL somewhere in this paragraph.}
@@ -142,7 +143,7 @@ a problem is broken down into subparts in order to make solving easier and less 
 Clojure utilizes the Java Virtual Machine (JVM) as an interpreter, and Clojure code compiles to JVM bytecode.
 It offers easy 
 %\emcomment{accessibilty?} 
-accessibility of Java frameworks. The Clojure REPL is another easy way to get acquainted with Clojure.
+accessibility of Java frameworks. The Clojure REPL \emcomment{what is REPL?} is another easy way to get acquainted with Clojure.
 The REPL allows users to see immediate results and respond easily and quickly. For any programmer, the use of the REPL 
 is highly advised and can make programming in Clojure much simpler.
 %\emcomment{This wouldn't make any sense to the target audience and is
@@ -154,7 +155,7 @@ is highly advised and can make programming in Clojure much simpler.
  % in this context? And you already said it was dynamic.}
 
 Because Clojure is a functional language, it puts strong emphasis on
-immutable data types. An immutable data type means data types cannot
+immutable data types. An immutable data type means data types \emcomment{data cannot be changed, not data types} cannot
 be changed, unlike %\emcomment{in? Also, why ``many'' and not all of
   %them?}
   imperative programming languages. When using
@@ -180,7 +181,7 @@ and then any parameters:
 	(<function-name> <argument 1> <argument 2>)
 \end{verbatim}
 
-Even built-in functions, such as mathematical functions, use this form:
+Even \emcomment{All functions, including built-in mathematical functions, use this form? ``Even'' implies that somehow this is unexpected.} built-in functions, such as mathematical functions, use this form:
 \begin{verbatim}
 	(+ 5 5)
 	-> 10
@@ -216,7 +217,7 @@ can define functions and variables:
 	-> "Hello World"
 \end{verbatim}
 
-In the above example, we define a string to be \texttt{"Hello World"}. This way, whenever we call \texttt{mystring},
+In the above example, we define a string to be \texttt{"Hello World"}. This way, whenever we call \emcomment{I would avoid ``call'' here since calling is for functions} \texttt{mystring},
 it will return the string we bound to the variable name. Here is an example of using \texttt{defn}:
 \begin{verbatim}
 	(defn increment-number [number] (+ number 1))
@@ -226,9 +227,9 @@ it will return the string we bound to the variable name. Here is an example of u
 
 In this example, we saved a function that takes a number and increments it by adding 1 to it. In any function, the 
 function name is the word after the \texttt{defn}, the pieces in the square brackets after the function name indicate 
-the arguments that the function takes in, and what follows is the body, or what the function does.
+the arguments that the function takes in, and what follows is the body, or what the function does. \emcomment{the expression returned by the function? ``does'' has imperative flavor}
 
-Now let's say that we have a program where we want to use a function, but only once. This means that we do not
+Now let us say that we have a program where we want to use a function, but only once. This means that we do not
 necessarily need to define it with a name because Clojure supports anonymous functions. Anonymous functions allow 
 programmers to quickly make
 % \emcomment{not sure what you mean by``rare'' here. Those that aren't predefined?}  
@@ -255,7 +256,7 @@ The following example is of the same increment-number function as above, but imp
 
 %Now, the program can call this function any time by using the name \texttt{increment-number}.
 
-Clojure also has a variety of different types of data structures. All
+Clojure also has a variety of different types of data structures. All 
 of Clojure's collections are immutable, which means that the data within the structures cannot be modified. 
 %\emcomment{I wouldn't go into persistent, just talk about immutable.}
 %This means that the data in the structures cannot be modified, and that each
@@ -264,7 +265,7 @@ The different types of structures Clojure uses are lists (denoted by \texttt{()}
 sets (denoted by \texttt{\#\{\}}), vectors (denoted by \texttt{[]}),
 and hashmaps (denoted by \texttt{\{\}}). The first three types of data
 structures listed can contain any number, including \texttt{nil} (Clojure's equivalent of \texttt{null} or nothing), of 
-values of any type (a data structure is untyped, which means it does not care if types of values in one structure
+values of any type (a data structure is untyped, which means it does not care \emcomment{too informal, rephrase} if types of values in one structure
 are mismatched):
 %\emcomment{don't use the word ``normal'' in a research paper} data structures: 
 \begin{verbatim}
@@ -291,13 +292,14 @@ However, hashmaps are unique in the fact that a hashmap is a collection of key-v
 	{key value, key value, key value}
 \end{verbatim}
 
-A more realistic example would look something like:
+A more realistic \emcomment{why ``realistic''? Just an example. What you are showing above is abstract syntax} example would look something like:
 \begin{verbatim}
 	{:a 1, :b 2, :c 3}
 \end{verbatim}
 %\emcomment{It's unclear from just the syntax what it means to be a
 %  collection of key/value pairs.}
 
+\emcomment{I would first introduce keywords and then explain that they are typcally used as keys}
 In hashmaps, usually keywords, indicated by a colon in front of a
 simple indicating word, are used as keys, and the value is what the
 key is bound to. 
