--- a/mics2015.bib
+++ b/mics2015.bib
@@ -1,25 +1,83 @@
-@inproceedings{Hickey:2008,
- author = {Hickey, Rich},
- title = {The Clojure programming language},
- booktitle = {Proceedings of the 2008 symposium on Dynamic languages},
- series = {DLS '08},
- year = {2008},
- isbn = {978-1-60558-270-2},
- location = {Paphos, Cyprus},
- pages = {1:1--1:1},
- articleno = {1},
- numpages = {1},
- url = {http://doi.acm.org.ezproxy.morris.umn.edu/10.1145/1408681.1408682},
- doi = {10.1145/1408681.1408682},
- acmid = {1408682},
- publisher = {ACM},
- address = {New York, NY, USA},
-} 
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
 
-%%%% sample of referencing a web site
+
+%% Created for Emma Sax at 2015-03-11 15:20:19 -0500 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@url{basic-clojure-info,
+	Author = {briantdawn},
+	Date-Added = {2015-03-11 20:18:54 +0000},
+	Date-Modified = {2015-03-11 20:20:13 +0000},
+	Lastchecked = {3/9/15},
+	Month = {March},
+	Title = {surviving-clojure},
+	Url = {https://github.com/clojurebridge-minneapolis/track2-surviving},
+	Year = {2015}}
+
+@article{clojure-REPL,
+	Author = {Timothy O'Brien},
+	Date-Added = {2015-03-11 20:16:56 +0000},
+	Date-Modified = {2015-03-11 20:18:44 +0000},
+	Journal = {Radar},
+	Lastchecked = {3/10/15},
+	Month = {May},
+	Title = {Clojure's advantage: Immediate feedback with REPL},
+	Url = {http://radar.oreilly.com/2012/05/clojure-repl.html},
+	Year = {2012}}
+
+@webpage{wikipedia-persistent,
+	Author = {Wikipedia},
+	Date-Added = {2015-03-11 20:15:41 +0000},
+	Date-Modified = {2015-03-11 20:16:31 +0000},
+	Lastchecked = {3/9/15},
+	Title = {Persistent Data Structure},
+	Url = {http://en.wikipedia.org/wiki/Persistent_data_structure},
+	Year = {2015}}
+
+@webpage{clojure-datastructures,
+	Author = {Rich Hickey},
+	Date-Added = {2015-03-11 20:13:55 +0000},
+	Date-Modified = {2015-03-11 20:15:10 +0000},
+	Lastchecked = {3/11/15},
+	Title = {Clojure - Data Structures},
+	Url = {http://clojure.org/data_structures},
+	Year = {2014}}
+
+@webpage{clojure-home,
+	Author = {Rich Hickey},
+	Date-Added = {2015-03-11 20:09:08 +0000},
+	Date-Modified = {2015-03-11 20:16:38 +0000},
+	Lastchecked = {3/11/15},
+	Title = {Clojure},
+	Url = {http://clojure.org/},
+	Year = {2014}}
+
+@inproceedings{Hickey:2008,
+	Acmid = {1408682},
+	Address = {New York, NY, USA},
+	Articleno = {1},
+	Author = {Hickey, Rich},
+	Booktitle = {Proceedings of the 2008 symposium on Dynamic languages},
+	Doi = {10.1145/1408681.1408682},
+	Isbn = {978-1-60558-270-2},
+	Location = {Paphos, Cyprus},
+	Numpages = {1},
+	Pages = {1:1--1:1},
+	Publisher = {ACM},
+	Series = {DLS '08},
+	Title = {The Clojure programming language},
+	Url = {http://doi.acm.org.ezproxy.morris.umn.edu/10.1145/1408681.1408682},
+	Year = {2008},
+	Bdsk-Url-1 = {http://doi.acm.org.ezproxy.morris.umn.edu/10.1145/1408681.1408682},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1408681.1408682}}
+
 @misc{Pmap,
-author = {Kim, Zachary},
-title = {ClojureDocs - pmap},
-year = {2010},
-howpublished = {\url{http://clojuredocs.org/clojure_core/clojure.core/pmap}},
-}
+	Author = {Kim, Zachary},
+	Howpublished = {\url{http://clojuredocs.org/clojure_core/clojure.core/pmap}},
+	Title = {ClojureDocs - pmap},
+	Year = {2010}}
